--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <title>Hello Rigo with Vanilla.js</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="bg-dark text-white d-flex flex-column min-vh-100 justify-content-start align-items-center text-center p-4">
+      <div id="counter-container" class="d-flex flex-column align-items-center">
+
+      </div>
+      <div id="input-container" class="d-flex">
+
+      </div>
+    </div>
     <script type="module" src="/src/js/main.jsx"></script>
   </body>
 </html>
